# mcman

./: .dockerignore  .gitattibutes  .gitattributes  .gitignore  404.html  CATALOG.md  CHANGELOG.md  CNAME  Cargo.toml  DOCS.md  Dockerfile  README.md  TECHNICAL.md  TODO.md  TUTORIAL.md  example.toml  flake.nix  hotreload.schema.json  index.html  mkdocs.yml  rustfmt.toml  servertoml.schema.json
.github/workflows/: bc23test.yml  build.yml  clippy.yml  publish.yml  release.yml  test-servers.yml
commands/: index.html
commands/cache/: index.html
commands/dev/: index.html
commands/env/: index.html
commands/export/: index.html
commands/import/: index.html
commands/info/: index.html
commands/init/: index.html
commands/markdown/: index.html
commands/pull/: index.html
commands/run/: index.html
commands/version/: index.html
commands/world/: index.html
docs/: folder-structure.md  index.md  installation.md
docs/commands/: build.md  cache.md  dev.md  env.md  export.md  import.md  index.md  info.md  init.md  markdown.md  pull.md  run.md  version.md  world.md
docs/concepts/: building.md  dev.md
docs/diagrams/: build.drawio  diag1.drawio
docs/reference/: clientsidemod.md  hook.md  lockfile.md  markdown-options.md  network.toml.md  server-launcher.md  server.toml.md  variables.md  world.md
docs/reference/downloadable/: buildtools.md  bungeecord.md  curserinth.md  custom-url.md  github-releases.md  hangar.md  index.md  jenkins.md  maven.md  modrinth.md  papermc.md  purpurmc.md  quilt.md  spigot.md  vanilla.md
docs/reference/servertype/: buildtools.md  bungeecord.md  fabric.md  forge.md  index.md  neoforge.md  papermc.md
docs/reference/types/: clientsidemod.md  server-launcher.md  world.md
docs/tutorials/: building.md  caching.md  dev.md  folder-structure.md  getting-started.md  importing-modpacks.md  index.md  network.md  options.md  using-worlds.md  variables.md
examples/creative-anarchy/: README.md  hotreload.toml  server.toml
examples/creative-anarchy/config/: server.properties  spigot.yml
examples/datapacks/: README.md  server.toml
examples/datapacks/config/: test.abc
examples/forge/: README.md  server.toml
examples/mrpack/: README.md  server.toml
examples/neoforge/: README.md  server.toml
examples/network/: README.md  network.toml
examples/quilt/: README.md  hotreload.toml  server.toml
examples/quilt/config/: server.properties
examples/quilt/pack/: index.toml  pack.toml  server.properties
examples/spigot/: README.md  server.toml
examples/spigot/config/: server.properties
examples/vanilla/: README.md  server.toml
installation/: index.html
reference/clientsidemod/: index.html
reference/downloadable/: index.html
reference/downloadable/buildtools/: index.html
reference/downloadable/bungeecord/: index.html
reference/lockfile/: index.html
reference/markdown-options/: index.html
reference/server-launcher/: index.html
reference/server.toml/: index.html
reference/servertype/: index.html
reference/world/: index.html
res/: aikars_flags  default_dockerfile  default_dockerignore  default_gitignore  default_readme  default_readme_network  markdown_links  proxy_flags  server.properties
res/java/: JavaInfo.java  compile.sh
res/schemas/: servertoml.schema.json
res/workflows/: packwiz.yml  test.yml
schemas/: network.schema.json
search/: search_index.json
src/: error.rs  main.rs  util.rs
src/_archive/app/: actions.rs  (+7 more)
src/api/: mod.rs
src/app/: actions.rs  caching.rs  downloading.rs  feedback.rs  from_string.rs  from_url.rs  hashing.rs  mod.rs  progress.rs  resolvable.rs
src/bootstrapper/: mod.rs
src/cache/: mod.rs
src/commands/: build.rs  cache.rs  completions.rs  dev.rs  download.rs  eject.rs  info.rs  init.rs  markdown.rs  migrate.rs  mod.rs  pull.rs  readme.rs  run.rs  setup.rs  update.rs  version.rs  websocket.rs
src/commands_old/: dev.rs
src/core/: addons.rs  bootstrap.rs  mod.rs  runner.rs  scripts.rs  serverjar.rs  worlds.rs
src/downloadable/: github.rs  import_url.rs  interactive.rs  markdown.rs  mod.rs  modrinth.rs  packwiz.rs  papermc.rs  purpur.rs  spigot.rs  vanilla.rs
src/hot_reload/: config.rs  mod.rs  pattern_serde.rs
src/interop/: hooks.rs  java.rs  markdown.rs  mod.rs  mrpack.rs  packwiz.rs  worlds.rs
src/model/: clientsidemod.rs  hooks.rs  lockfile.rs  mod.rs  network.rs  server.rs  serverlauncher.rs  servertoml.rs  world.rs
src/mrpack/: mod.rs
src/sources/: curserinth.rs  fabric.rs  forge.rs  github.rs  hangar.rs  jenkins.rs  maven.rs  mclogs.rs  mod.rs  modrinth.rs  neoforge.rs  papermc.rs  purpur.rs  quilt.rs  spigot.rs  vanilla.rs
src/util/: env.rs  hash.rs  logger.rs  maven_import.rs  md.rs  mod.rs  mrpack.rs  packwiz.rs
test/: server.toml
tutorials/: index.html
tutorials/building/: index.html
tutorials/caching/: index.html
tutorials/dev/: index.html
tutorials/folder-structure/: index.html
tutorials/getting-started/: index.html
tutorials/importing-modpacks/: index.html
tutorials/network/: index.html
tutorials/options/: index.html
tutorials/using-worlds/: index.html
tutorials/variables/: index.html
(+274 files in other folders)
