[package]
name = "mcman"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/ParadigmMC/mcman"
homepage = "https://paradigmmc.github.io/mcman/"
authors = ["ParadigmMC"]
license = "gpl"
description = "Powerful Minecraft Server Manager CLI"
documentation = "https://paradigmmc.github.io/mcman/"
keywords = [
    "minecraft", "server"
]
categories = ["command-line-utilities", "config", ""]

[profile.release]
debug = false
strip = true
lto = true
opt-level = "s"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = [ "derive" ] }
console = "0.15"
dialoguer = "0.10"
futures = "0.3"
indexmap = "2.0"
indicatif = "0.17"
java-properties = { git = "https://github.com/ParadigmMC/java-properties.git" }
mcapi = { git = "https://github.com/ParadigmMC/mcapi.git" }
#mcapi = { path = "../mcapi" }
pathdiff = { git = "https://github.com/Manishearth/pathdiff.git" }
rpackwiz = { git = "https://github.com/vgskye/rpackwiz.git" }
regex = "1.9"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.7"
tokio = { version = "1.29", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.7"
walkdir = "2.3"
zip = "0.6"
sha2 = "0.10"
notify = { version = "6.0", default-features = false }
glob = "0.3"
async-trait = "0.1"
roxmltree = "0.18"
cached = "0.44"
