[package]
name = "mcman"
version = "0.4.5"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/ParadigmMC/mcman"
homepage = "https://paradigmmc.github.io/mcman/"
authors = ["ParadigmMC"]
license = "gpl-3"
description = "Powerful Minecraft Server Manager CLI"
documentation = "https://paradigmmc.github.io/mcman/"
keywords = [
    "minecraft", "server"
]
categories = ["command-line-utilities", "config"]

[profile.release]
strip = true
lto = true
opt-level = "s"

[lints.clippy]
all = "deny"
pedantic = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[dependencies]
anyhow = "1.0"
cached = "0.47"
clap = { version = "4.4", features = ["derive"] }
confique = { version = "0.2", default-features = false, features = ["toml"] }
console = "0.15"
dialoguer = "0.11"
digest = "0.10"
dirs = "5.0"
glob = "0.3"
hex = "0.4"
indexmap = "2.1"
indicatif = "0.17"
mcapi = { git = "https://github.com/ParadigmMC/mcapi.git" }
md-5 = "0.10"
notify-debouncer-full = { version = "0.3" }
opener = "0.6"
pathdiff = { git = "https://github.com/Manishearth/pathdiff.git" }
rpackwiz = { git = "https://github.com/vgskye/rpackwiz.git" }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
roxmltree = "0.19"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.9"
tokio = { version = "1.35", features = ["macros", "rt", "rt-multi-thread", "process", "signal", "io-std"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
walkdir = "2.4"
zip = "0.6"
cliclack = "0.2.5"
