[package]
name = "mcman"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/ParadigmMC/mcman"
homepage = "https://paradigmmc.github.io/mcman/"
authors = ["ParadigmMC"]
license = "gpl-3"
description = "Powerful Minecraft Server Manager CLI"
documentation = "https://paradigmmc.github.io/mcman/"
keywords = [
    "minecraft", "server"
]
categories = ["command-line-utilities", "config"]

[profile.release]
strip = true
lto = true
opt-level = "s"

[lints.clippy]
all = "deny"
pedantic = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[dependencies]
anyhow = "1.0"
cached = "0.55"
clap = { version = "4.5", features = ["derive"] }
confique = { version = "0.3", default-features = false, features = ["toml"] }
console = "0.15"
dialoguer = "0.11"
digest = "0.10"
dirs = "6.0"
glob = "0.3"
hex = "0.4"
indexmap = "2.8"
indicatif = "0.17"
md-5 = "0.10"
notify-debouncer-full = { version = "0.5" }
opener = "0.7"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
roxmltree = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.19"
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread", "process", "signal", "io-std"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
walkdir = "2.5"
zip = "2.4"
cliclack = "0.3.5"
os_info = { version = "3.10", default-features = false }
lazy_static = "1.5"
bytes = "1.10"
murmur2 = "0.1"
futures = "0.3"
indextree = "4.7"
schemars = "0.8"
ratatui = "0.29.0"
tokio-tungstenite = "0.26.2"
log = "0.4.26"
env_logger = "0.11.7"
toml_edit = "0.22"
